--- a/app/src/main/res/layout/fragment_overview_fragement.xml
+++ b/app/src/main/res/layout/fragment_overview_fragement.xml
@@ -2,8 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="polyu.hw.financenote.ui.OverviewFragement">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <LinearLayout
+        android:id="@+id/chart"
+        android:layout_width="600dp"
+        android:layout_height="350dp"
+        android:layout_margin="15dp"
+        android:orientation="vertical">
+    </LinearLayout>
 
 </FrameLayout>
